buscando posicion aleatoria de los saltamontes

--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hungry Chamaleon</title>
-    <link rel="stylesheet" href="styles.css"> 
-</head>
-<body>
-    <div id="canvas">
-        <div id="chamaleon"></div>
-        <div id="tongue"></div>
-        <div id="saltamontes"><img src="/Images/grasshopper-clipart-drawing-2.png"></div>
-        <div id="lives">
-            <img id="live1" src="/Images/6872332_preview.png">
-            <img id="live2" src="/Images/6872332_preview.png">
-            <img id="live3" src="/Images/6872332_preview.png">
-        </div>
-    </div>
-    <script type="text/javascript" src="index.js"></script>
-    <script type="text/javascript" src="DOM.js"></script>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hungry Chamaleon</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <section id="container">
+    <div>
+      <img id="chamaleon" src="./Images/camaleon sin fondo ok.png"></div>
+    <div><img id="tongue" src=""></div>
+    <div id="wrapper-grasshopper"></div>
+    <div class="lives">
+      <img id="live1" src="./Images/vida.png">
+      <img id="live2" src="./Images/vida.png">
+      <img id="live3" src="./Images/vida.png">
+    </div>
+  </section>
+  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="DOM.js"></script>
 </body>
+
 </html>
