puestos los saltamontes con colores aleatorios y tambien el camaleon con color aleatorio

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
   <section id="container">
-    <div>
-      <img id="chamaleon" src="./Images/camaleon sin fondo ok.png"></div>
+    <div id="wrapper-chamaleon"></div>
     <div><img id="tongue" src=""></div>
     <div id="wrapper-grasshopper"></div>
     <div class="lives">
