las clases del camaleon se cambian

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
   <section id="container">
-    <div id="wrapper-chamaleon"></div>
+    <div class="chamaleon"></div>
     <div><img id="tongue" src=""></div>
     <div id="wrapper-grasshopper"></div>
     <div class="lives">
-      <img id="live1" src="./Images/vida.png">
-      <img id="live2" src="./Images/vida.png">
-      <img id="live3" src="./Images/vida.png">
+      <img id="live1" src="./Images/heart.png">
+      <img id="live2" src="./Images/heart.png">
+      <img id="live3" src="./Images/heart.png">
     </div>
   </section>
   <script type="text/javascript" src="index.js"></script>
