--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="chamaleon"></div>
     <div><img id="tongue" src=""></div>
     <div id="wrapper-grasshopper"></div>
-    <div class="lives">
-      <img id="live1" src="./Images/heart.png">
-      <img id="live2" src="./Images/heart.png">
-      <img id="live3" src="./Images/heart.png">
+    <div id="lives">
+      <div class="live"></div>
+      <div class="live"></div>
+      <div class="live"></div>
     </div>
   </section>
   <script type="text/javascript" src="index.js"></script>
