contador de puntos hecho

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="live"></div>
       <div class="live"></div>
     </div>
+    <div id="counter"></div>
   </section>
   <script type="text/javascript" src="index.js"></script>
   <script type="text/javascript" src="DOM.js"></script>
