--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-
+  <div id="portada">
+    <button id="btn-play"> quiero jugar de una vez</button>
+  </div>
   <section id="container">
     <div class="chamaleon"></div>
     <div><img id="tongue" src=""></div>
