--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hungry Chamaleon</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div id="portada">
-    <button id="btn-play"> quiero jugar de una vez</button>
+    <div id=titulo>HUNGRY CHAMALEON</div>
+    <img src="/Images/chamaleon-stage.png">
+    <button id="btn-play"> START!</button>
   </div>
   <section id="container">
     <div class="chamaleon"></div>
