--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
   <section id="container">
     <div class="chamaleon"></div>
-    <div><img id="tongue" src=""></div>
+    <div id="tongue"></div>
     <div id="wrapper-grasshopper"></div>
     <div id="lives">
       <div class="live"></div>
