--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
 <body>
   <div id="portada">
-    <div id=titulo>HUNGRY CHAMALEON</div>
-    <img src="/Images/chamaleon-stage.png">
+    <h2>HUNGRY CHAMALEON</h2>
+    <img src="/Images/chamaleon-stage2.png"><br/>
     <button id="btn-play"> START!</button>
   </div>
   <section id="container">
-    <div class="chamaleon"></div>
     <div id="tongue"></div>
     <div id="wrapper-grasshopper"></div>
     <div id="lives">
@@ -26,6 +25,8 @@
     </div>
     <div id="counter"></div>
   </section>
+  <div class="chamaleon"></div>
+
   <script type="text/javascript" src="index.js"></script>
   <script type="text/javascript" src="DOM.js"></script>
 </body>
