--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <img src="./Images/chamaleon-stage2.png"><br/>
     <button id="btn-play"> START!</button>
   </div>
-        <div id="game-over" class="desactivar">
-          <img src="./Images/loser.png">
-          <button id="botonOver">TRY AGAIN</button>
-        </div>
+  <div id="game-over" class="desactivar">
+    <img class="end" src="./Images/loser.png"><br>
+    <button id="botonOver">TRY AGAIN</button>
+  </div>
   <section id="container">
     <div id="tongue"></div>
     <div id="wrapper-grasshopper"></div>
